--- a/app/src/main/res/layout/fragment_music.xml
+++ b/app/src/main/res/layout/fragment_music.xml
@@ -6,49 +6,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.application.musica.Fragment.MusicFragment"
     android:orientation="vertical"
-    android:background="@color/light_surface">
+    android:background="@color/dark_surface">
 
-
-    <LinearLayout
-        android:layout_marginTop="8dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <ImageButton
-            android:layout_marginLeft="4dp"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/icon_back"
-            android:clickable="true"
-            android:foreground="?attr/selectableItemBackgroundBorderless"
-            android:backgroundTint="@android:color/transparent"
-            android:id="@+id/back_btn"
-            android:contentDescription="Back button"
-            />
-        <TextView
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:layout_gravity="center_vertical"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:text="Musica"/>
-
-        <Button
-
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginRight="4dp"
-            android:foreground="?attr/selectableItemBackgroundBorderless"
-            android:clickable="true"
-            android:contentDescription="More options"
-            app:backgroundTint="@android:color/transparent"
-            app:icon="@drawable/three_dots"
-            app:iconGravity="textStart"
-            app:iconTint="@color/icon_color" />
-    </LinearLayout>
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -58,17 +17,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="14dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Name"
                 android:id="@+id/music_name"
-                android:textSize="22sp"
+                android:textSize="20sp"
                 android:layout_marginHorizontal="20dp"
                 android:textAlignment="center"
                 />
             <TextView
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Artist"
@@ -112,13 +71,20 @@
             android:id="@+id/mseekbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="18dp"/>
+            android:layout_marginHorizontal="10dp" />
 
         <LinearLayout
-            android:background="@color/dark_surface"
+            android:background="@color/light_surface"
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="100dp">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                >
+
+            </LinearLayout>
             <ImageButton
                 android:id="@+id/music_previous"
                 android:layout_width="wrap_content"
@@ -143,6 +109,13 @@
                 android:foreground="?attr/selectableItemBackgroundBorderless"
                 android:backgroundTint="@android:color/transparent"
                 />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                >
+
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
